force-app/main/default/objects/Etat__c/Etat__c.object-meta.xml
<CustomObject>
    <label>Etat</label>
    <nameField>
        <label>Nom de Etat</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>