force-app/main/default/objects/Etat__c/fields/Code_Etat__c.field-meta.xml
<CustomField>
    <fullName>Code_Etat__c</fullName>
    <externalId>true</externalId>
    <label>Code Etat</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>