force-app/main/default/objects/Etat__c/fields/x18caracter__c.field-meta.xml
<CustomField>
    <fullName>x18caracter__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>x18caracter</label>
    <type>Text</type>
</CustomField>