force-app/main/default/objects/Etat__c/listViews/Liste_des_Etats_CANADA.listView-meta.xml
<ListView>
    <fullName>Liste_des_Etats_CANADA</fullName>
    <columns>Code_Etat__c</columns>
    <columns>NAME</columns>
    <columns>Code_pays__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_pays__c</field>
        <operation>contains</operation>
        <value>CAN</value>
    </filters>
    <label>Liste des Etats - CANADA</label>
    <language>fr</language>
</ListView>