force-app/main/default/objects/Etat__c/listViews/Liste_des_Etats_USA.listView-meta.xml
<ListView>
    <fullName>Liste_des_Etats_USA</fullName>
    <columns>Code_Etat__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_pays__c</field>
        <operation>contains</operation>
        <value>USA</value>
    </filters>
    <label>Liste des Etats - USA</label>
</ListView>